contentgrid-testcontainers-k3s-cilium/src/main/resources/com/contentgrid/testcontainers/k3s/customizer/cilium/cilium.yaml
# coredns cilium-network-policy
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: coredns
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      k8s:io.kubernetes.pod.namespace: kube-system
      k8s:k8s-app: kube-dns
  ingress:
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - kube-apiserver
---
# traefik cilium-network-policy
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  namespace: kube-system
  name: traefik
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: traefik
  ingress:
    - fromEntities:
        - world
        - cluster
  egress:
    - toEntities:
        - cluster
---
# helm-install-traefik cilium-network-policy
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  namespace: kube-system
  name: helm-install-traefik
spec:
  endpointSelector:
    matchLabels:
      batch.kubernetes.io/job-name: helm-install-traefik
  egress:
    - toEntities:
        - kube-apiserver
---
# helm-install-traefik-crd cilium-network-policy
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  namespace: kube-system
  name: helm-install-traefik-crd
spec:
  endpointSelector:
    matchLabels:
      batch.kubernetes.io/job-name: helm-install-traefik-crd
  egress:
    - toEntities:
        - kube-apiserver
---
# local-path provisioner cilium-network-policy
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  namespace: kube-system
  name: local-path-provisioner
spec:
  endpointSelector:
    matchLabels:
      app: local-path-provisioner
  egress:
    - toEntities:
        - kube-apiserver
---
